# keybox

./: .gitignore  CMakeLists.txt  README.md  main.cpp
boost_tests/: AsymmetricKeyTest.cpp  Base64Test.cpp  CKBFileTest.cpp  CMakeLists.txt  CMaskedPwdTest.cpp  CPwdEntryTest.cpp  CRequestTest.cpp  CipherTest.cpp  GZTest.cpp  KdbxReader.cpp  KdbxReaderTest.cpp
iosbuild/: CMakeCache.txt  cmake_install.cmake
iosbuild/CMakeScripts/: ReRunCMake.make
iosbuild/iosKeybox.xcworkspace/: contents.xcworkspacedata
iosbuild/iosKeybox.xcworkspace/xcuserdata/tonglt.xcuserdatad/: UserInterfaceState.xcuserstate
iosbuild/keybox.xcodeproj/: project.pbxproj
iosbuild/keybox.xcodeproj/project.xcworkspace/xcuserdata/tonglt.xcuserdatad/: UserInterfaceState.xcuserstate
iosbuild/keybox.xcodeproj/xcuserdata/tonglt.xcuserdatad/xcschemes/: xcschememanagement.plist
keepassdump/: CMakeLists.txt  README.md  help.h  help_mac.cpp  help_win32.cpp  main.cpp
keybox_desktop/: CKBModel.cpp  CKBModel.h  CMakeLists.txt  CNewClientDlg.cpp  CNewClientDlg.h  CPasswordBox.cpp  CPasswordBox.h  CPrimaryPasswordDlg.cpp  CPrimaryPasswordDlg.h  CPwdEntryDlg.cpp  CPwdEntryDlg.h  CPwdEntryTableView.cpp  CPwdEntryTableView.h  CPwdGeneratorDlg.cpp  CPwdGeneratorDlg.h  CPwdGroupDlg.cpp  CPwdGroupDlg.h  CPwdGroupListView.cpp  CPwdGroupListView.h  CSettings.cpp  CSettings.h  CSyncDlg.cpp  CSyncDlg.h  CSyncSettingDlg.cpp  CSyncSettingDlg.h  EntryDlg.cpp  EntryDlg.h  EntryView.cpp  EntryView.h  MainWindow.cpp  MainWindow.h  PasswordBox.cpp  PasswordBox.h  PrimaryPasswordDlg.cpp  PrimaryPasswordDlg.h  main.cpp  resouces.qrc
keyboxa/: .gitignore  build.gradle  settings.gradle
keyboxa/app/: build.gradle
keyboxa/app/src/main/: AndroidManifest.xml
keyboxa/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-stub.cpp
keyboxa/app/src/main/java/com/keybox/: Entry.kt  Group.kt  KBFile.kt  MainActivity.kt  NativeBridge.kt  NativeOperationResult.kt  SetupNewClientResult.kt
keyboxa/app/src/main/java/com/keybox/adapter/: EntryAdapter.kt  GroupAdapter.kt
keyboxa/app/src/main/java/com/keybox/ui/: ChangePasswordFragment.kt  EntryEditorFragment.kt  EntryListFragment.kt  GroupsFragment.kt  NewClientSetupFragment.kt  PasswordGeneratorFragment.kt  SyncSettingsFragment.kt  UnlockFragment.kt
keyboxa/app/src/main/res/drawable/: ic_launcher_foreground.xml
keyboxa/app/src/main/res/layout/: activity_main.xml  fragment_change_password.xml  fragment_entry_editor.xml  fragment_entry_list.xml  fragment_groups.xml  fragment_new_client_setup.xml  fragment_password_generator.xml  fragment_sync_settings.xml  fragment_unlock.xml  item_pwd_entry.xml  nav_header.xml
keyboxa/app/src/main/res/menu/: drawer_menu.xml  menu_sync_settings.xml
keyboxa/app/src/main/res/values/: colors.xml  icon_background.xml  strings.xml  themes.xml
keyboxi/Config/: Paths.xcconfig
keyboxi/keyboxi/: ChangePasswordView.swift  ContentView.swift  GroupToEntryView.swift  NewClientSetupView.swift  PwdEntry.swift  PwdEntryListView.swift  PwdEntryListView.swift ...``` containing revised code with adjustments.  PwdEntryTests.swift  PwdEntryView.swift  PwdGeneratorView.swift  PwdGroup.swift  SyncSettingsView.swift  UnlockView.swift  keyboxiApp.swift  objc_bridge.h
keyboxi/keyboxi.xcodeproj/: project.pbxproj
keyboxi/keyboxi.xcodeproj/project.xcworkspace/xcuserdata/tonglt.xcuserdatad/: UserInterfaceState.xcuserstate
keyboxi/keyboxi.xcodeproj/xcuserdata/tonglt.xcuserdatad/xcschemes/: xcschememanagement.plist
keyboxi/keyboxiTests/: keyboxiTests.swift
keyboxi/keyboxiUITests/: keyboxiUITests.swift  keyboxiUITestsLaunchTests.swift
keyboxi/objcWrap/: OCKBFile.h  OCKBFile.mm  OCKBFileHeader.h  OCKBFileHeader.mm  OCipherEngine.h  OCipherEngine.mm  OPasswordGenerator.h  OPasswordGenerator.mm  OPwdEntry.h  OPwdEntry.mm  OPwdGroup.h  OPwdGroup.mm  ORandomGenerator.h  ORandomGenerator.mm
keyboxw/: .bashrc  .gitignore  README.md  samconfig.toml  template.yaml
keyboxw/events/: register.json
keyboxw/hello_world/: app.py
keyboxw/hello_world/activate/: handler.py
keyboxw/hello_world/refresh_token/: handler.py
keyboxw/hello_world/register/: handler.py
keyboxw/hello_world/utility/: ddb_adapter.py  http_parameter_helper.py  user_entity.py
keyboxw/keybox_web/: app.py  requirements.txt
keyboxw/keybox_web/activate/: handler.py
keyboxw/keybox_web/get_public_key/: handler.py
keyboxw/keybox_web/mis_tools/: fetch_secrete.py  generate_refresh_url.py
keyboxw/keybox_web/refresh_token/: handler.py
keyboxw/keybox_web/register/: handler.py
keyboxw/keybox_web/retrieve/: handler.py
keyboxw/keybox_web/setup_new_client/: handler.py
keyboxw/keybox_web/upload/: handler.py
keyboxw/keybox_web/utility/: configs.py  ddb_adapter.py  email_adapter.py  http_parameter_helper.py  secretsmanager.py  user_entity.py
keyboxw/scripts/: deploy.sh  deploy_beta.sh  deploy_lambda_beta.sh  deploy_lambda_prod.sh  deploy_prod.sh  deploy_static_site.sh
keyboxw/static_content/: index.html
keyboxw/static_content/assets/: site.css  site.js
keyboxw/static_content/privacy/: index.html
keyboxw/static_site/: index.html
keyboxw/tests/: requirements.txt
keyboxw/tests/unit/: test_handler.py
objc_utilities/: CMakeLists.txt  ObjcMaskedBlob.h  ObjcMaskedBlob.mm  ObjcPwdEntry.h  ObjcRandomGenerator.h  ObjcRandomGenerator.mm
utilities/: Base64Coder.cpp  Base64Coder.h  CAsymmetricKeyPair.cpp  CAsymmetricKeyPair.h  CGZcompressor.cpp  CGZcompressor.h  CKBFile.cpp  CKBFile.h  CKBFileHeader.cpp  CKBFileHeader.h  CMakeLists.txt  CMaskedBlob.cpp  CMaskedBlob.h  CMaskedPwd.cpp  CMaskedPwd.h  CPasswordGenerator.cpp  CPasswordGenerator.h  CPwdEntry.cpp  CPwdEntry.h  CPwdGroup.cpp  CPwdGroup.h  CRandomGenerator.cpp  CRandomGenerator.h  CRequest.cpp  CRequest.h  CSyncEngine.cpp  CSyncEngine.h  CSyncEngine_win.cpp  CipherEngine.h  CipherEngine_linux.cpp  CipherEngine_mac.cpp  CipherEngine_win.cpp  InitGlobalRG.h  InitGlobalRG_linux.cpp  InitGlobalRG_mac.cpp  InitGlobalRG_win.cpp  KeepassReader.cpp  KeepassReader.h  RandomGenerator.cpp  RandomGenerator.h  (+4 more)
(+1 files in other folders)
